--- a/poster/styles/styles.scss
+++ b/poster/styles/styles.scss
@@ -2,7 +2,10 @@
     font-family: sans-serif;
     font-weight: 200;
     background-color: orange;
+    font-size: 32px;
 }
+
+
 
 
 
@@ -22,6 +25,7 @@
     grid-row: 1/2;
     grid-template-rows: .25fr .25fr .25fr;
     grid-template-columns: 1fr 1fr 1fr;
+    font-size: .5em;
 }
 
 .text-1 {
@@ -108,7 +112,7 @@
     grid-row: 3/4;
     grid-template-columns: .25fr .25fr;
     grid-template-rows: .1fr .1fr .1fr .1fr;
-    font-size: 12.5em;
+    font-size: 40em;
     text-transform: uppercase;
     padding-left: 5%;
     z-index: 0;
@@ -163,10 +167,36 @@ h3 {
 }
 
 p {
-    font-size: .75em;
+    font-size: .5em;
 }
 
 img {
     max-width: 100%;
     max-height: 100%;
 }
+
+@media (max-width: 800px) and (min-width:600px) {
+    h3 {
+        font-size: 6em;
+    }
+
+    p {
+        font-size: 2em;
+    }
+
+    .hero {
+        display: grid;
+        grid-column: 2/4;
+        grid-row: 3/4;
+        grid-template-columns: .25fr .25fr;
+        grid-template-rows: .1fr .1fr .1fr .1fr;
+        font-size: 20em;
+        text-transform: uppercase;
+        padding-left: 5%;
+        z-index: 0;
+    }
+
+
+
+
+    @media (max-width: 599px) and (min-width:0px) {
