--- a/poster/styles/styles.scss
+++ b/poster/styles/styles.scss
@@ -31,7 +31,7 @@
 .text-1 {
     grid-column: 1/2;
     grid-row: 1/2;
-    font-size: 100%;
+    font-size: 10em
 }
 
 .text-2 {
@@ -39,14 +39,14 @@
     grid-row: 1/2;
     text-align: right;
     margin-right: 5%;
-    font-size: 100%;
+    font-size: 10em
 }
 
 .text-3 {
     grid-column: 3/4;
     grid-row: 1/2;
     text-align: right;
-    font-size: 100%;
+    font-size: 10em
 }
 
 .top-subtext {
@@ -66,6 +66,7 @@
     grid-template-rows: .12fr .12fr .12fr .12fr .12fr;
     background-color: transparent;
     margin-left: 5%;
+    z-index: 0;
 
 }
 
@@ -74,7 +75,7 @@
     grid-row: 5/6;
     transform: rotate(-90deg);
     padding: 5%;
-    font-size: 80%;
+    font-size: .8em
 }
 
 .text-5 {
@@ -82,7 +83,7 @@
     grid-row: 4/5;
     transform: rotate(-90deg);
     padding: 5%;
-    font-size: 80%;
+    font-size: .8em
 }
 
 .text-6 {
@@ -90,7 +91,7 @@
     grid-row: 3/4;
     transform: rotate(-90deg);
     padding: 5%;
-    font-size: 80%;
+    font-size: .8em
 }
 
 .text-7 {
@@ -98,7 +99,7 @@
     grid-row: 2/3;
     transform: rotate(-90deg);
     padding: 5%;
-    font-size: 80%;
+    font-size: .8em
 }
 
 .text-8 {
@@ -106,7 +107,7 @@
     grid-row: 1/2;
     transform: rotate(-90deg);
     padding: 5%;
-    font-size: 80%;
+    font-size: .8em
 }
 
 .image {
@@ -125,7 +126,7 @@
 
     text-transform: uppercase;
     padding-left: 5%;
-    z-index: 0;
+    z-index: 1;
 }
 
 .text-9 {
