--- a/poster/styles/styles.scss
+++ b/poster/styles/styles.scss
@@ -66,6 +66,7 @@
     grid-template-rows: .12fr .12fr .12fr .12fr .12fr;
     background-color: transparent;
     margin-left: 5%;
+    margin-right: 10%;
     z-index: 0;
 
 }
@@ -195,6 +196,37 @@ img {
 }
 
 @media (max-width: 800px) and (min-width:600px) {
+
+    h3 {
+        font-size: 30%;
+    }
+
+    p {
+        font-size: 25%;
+    }
+
+    .text-1 {
+        grid-column: 1/2;
+        grid-row: 1/2;
+        font-size: 5em
+    }
+
+    .text-2 {
+        grid-column: 2/3;
+        grid-row: 1/2;
+        text-align: right;
+        margin-right: 5%;
+        font-size: 15m
+    }
+
+    .text-3 {
+        grid-column: 3/4;
+        grid-row: 1/2;
+        text-align: right;
+        font-size: 5em
+    }
+
+
 
 
 
