--- a/poster/styles/styles.scss
+++ b/poster/styles/styles.scss
@@ -1,7 +1,7 @@
 * {
     font-family: sans-serif;
     font-weight: 200;
-    background-color: orange;
+    background-color: #bc6c32;
     font-size: 32px;
 }
 
@@ -13,7 +13,7 @@
     display: grid;
     grid-template-rows: .5fr 1.5fr 9fr;
     grid-template-columns: 1fr 2fr 2fr;
-    background-color: orange;
+    background-color: #bc6c32;
     margin: 5%;
 
 }
