--- a/poster/styles/styles.scss
+++ b/poster/styles/styles.scss
@@ -5,52 +5,71 @@
     font-size: 32px;
 }
 
-
-
-
-
 .wrapper {
+    display: -ms-grid;
     display: grid;
+    -ms-grid-rows: .5fr 1.5fr 9fr;
     grid-template-rows: .5fr 1.5fr 9fr;
+    -ms-grid-columns: 1fr 2fr 2fr;
     grid-template-columns: 1fr 2fr 2fr;
     background-color: #bc6c32;
     margin: 5%;
-
 }
 
-
 .top {
+    display: -ms-grid;
     display: grid;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 3;
     grid-column: 1/4;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
     grid-row: 1/2;
+    -ms-grid-rows: .25fr .25fr .25fr;
     grid-template-rows: .25fr .25fr .25fr;
+    -ms-grid-columns: 1fr 1fr 1fr;
     grid-template-columns: 1fr 1fr 1fr;
-
 }
 
 .text-1 {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
     grid-column: 1/2;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
     grid-row: 1/2;
-    font-size: 10em
+    font-size: 10em;
 }
 
 .text-2 {
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
     grid-column: 2/3;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
     grid-row: 1/2;
     text-align: right;
     margin-right: 5%;
-    font-size: 10em
+    font-size: 10em;
 }
 
 .text-3 {
+    -ms-grid-column: 3;
+    -ms-grid-column-span: 1;
     grid-column: 3/4;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
     grid-row: 1/2;
     text-align: right;
-    font-size: 10em
+    font-size: 10em;
 }
 
 .top-subtext {
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 2;
     grid-column: 2/4;
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
     grid-row: 2/3;
     text-align: left;
     margin-left: 40%;
@@ -58,126 +77,199 @@
 }
 
 .side {
+    display: -ms-grid;
     display: grid;
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
     grid-column: 1/2;
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 2;
     grid-row: 2/4;
-
+    -ms-grid-columns: 1fr;
     grid-template-columns: 1fr;
-    grid-template-rows: .12fr .12fr .12fr .12fr .12fr;
+    -ms-grid-rows: .12fr .12fr .12fr .12fr .12fr;
+    grid-template-rows: .1fr .1fr .1fr .1fr .1fr;
     background-color: transparent;
     margin-left: 5%;
     margin-right: 10%;
     z-index: 0;
-
+    line-height: 50%;
 }
 
 .text-4 {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
     grid-column: 1/2;
+    -ms-grid-row: 5;
+    -ms-grid-row-span: 1;
     grid-row: 5/6;
+    -webkit-transform: rotate(-90deg);
     transform: rotate(-90deg);
     padding: 5%;
-    font-size: .8em
+    font-size: .6em;
 }
 
 .text-5 {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
     grid-column: 1/2;
+    -ms-grid-row: 4;
+    -ms-grid-row-span: 1;
     grid-row: 4/5;
+    -webkit-transform: rotate(-90deg);
     transform: rotate(-90deg);
     padding: 5%;
-    font-size: .8em
+    font-size: .6em;
 }
 
 .text-6 {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
     grid-column: 1/2;
+    -ms-grid-row: 3;
+    -ms-grid-row-span: 1;
     grid-row: 3/4;
+    -webkit-transform: rotate(-90deg);
     transform: rotate(-90deg);
     padding: 5%;
-    font-size: .8em
+    font-size: .6em;
 }
 
 .text-7 {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
     grid-column: 1/2;
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
     grid-row: 2/3;
+    -webkit-transform: rotate(-90deg);
     transform: rotate(-90deg);
     padding: 5%;
-    font-size: .8em
+    font-size: .6em;
 }
 
 .text-8 {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
     grid-column: 1/2;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
     grid-row: 1/2;
+    -webkit-transform: rotate(-90deg);
     transform: rotate(-90deg);
     padding: 5%;
-    font-size: .8em
+    font-size: .6em;
 }
 
 .image {
+    -ms-grid-column: 3;
+    -ms-grid-column-span: 1;
     grid-column: 3/4;
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
     grid-row: 2/3;
     overflow: none;
 }
 
-
 .hero {
+    display: -ms-grid;
     display: grid;
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 2;
     grid-column: 2/4;
+    -ms-grid-row: 3;
+    -ms-grid-row-span: 1;
     grid-row: 3/4;
+    -ms-grid-columns: .25fr .25fr;
     grid-template-columns: .25fr .25fr;
+    -ms-grid-rows: .1fr .1fr .1fr .1fr;
     grid-template-rows: .1fr .1fr .1fr .1fr;
-
     text-transform: uppercase;
-    padding-left: 5%;
+    padding-left: 10%;
+
     z-index: 1;
 }
 
 .text-9 {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
     grid-column: 1/2;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
     grid-row: 1/2;
     padding-right: 5%;
     font-size: 600%;
 }
 
 .text-10 {
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
     grid-column: 2/3;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
     grid-row: 1/2;
     font-size: 600%;
 }
 
 .text-11 {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
     grid-column: 1/2;
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
     grid-row: 2/3;
     padding-right: 5%;
     font-size: 600%;
 }
 
 .text-12 {
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
     grid-column: 2/3;
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
     grid-row: 2/3;
     font-size: 600%;
 }
 
 .text-13 {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
     grid-column: 1/2;
+    -ms-grid-row: 3;
+    -ms-grid-row-span: 1;
     grid-row: 3/4;
     padding-right: 5%;
     font-size: 600%;
 }
 
 .text-14 {
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
     grid-column: 2/3;
+    -ms-grid-row: 3;
+    -ms-grid-row-span: 1;
     grid-row: 3/4;
     font-size: 600%;
 }
 
 .text-15 {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
     grid-column: 1/2;
+    -ms-grid-row: 4;
+    -ms-grid-row-span: 1;
     grid-row: 4/5;
     padding-right: 5%;
     font-size: 600%;
 }
 
 .text-16 {
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 1;
     grid-column: 2/3;
+    -ms-grid-row: 4;
+    -ms-grid-row-span: 1;
     grid-row: 4/5;
     font-size: 600%;
 }
@@ -195,8 +287,7 @@ img {
     max-height: 100%;
 }
 
-@media (max-width: 800px) and (min-width:600px) {
-
+@media (max-width: 800px) and (min-width: 600px) {
     h3 {
         font-size: 30%;
     }
@@ -206,33 +297,40 @@ img {
     }
 
     .text-1 {
+        -ms-grid-column: 1;
+        -ms-grid-column-span: 1;
         grid-column: 1/2;
+        -ms-grid-row: 1;
+        -ms-grid-row-span: 1;
         grid-row: 1/2;
-        font-size: 5em
+        font-size: 5em;
     }
 
     .text-2 {
+        -ms-grid-column: 2;
+        -ms-grid-column-span: 1;
         grid-column: 2/3;
+        -ms-grid-row: 1;
+        -ms-grid-row-span: 1;
         grid-row: 1/2;
         text-align: right;
         margin-right: 5%;
-        font-size: 5em
+        font-size: 5em;
     }
 
     .text-3 {
+        -ms-grid-column: 3;
+        -ms-grid-column-span: 1;
         grid-column: 3/4;
+        -ms-grid-row: 1;
+        -ms-grid-row-span: 1;
         grid-row: 1/2;
         text-align: right;
-        font-size: 5em
+        font-size: 5em;
     }
 }
 
-
-
-
-
-
-@media (max-width: 599px) and (min-width:0px) {
+@media (max-width: 599px) and (min-width: 0px) {
     h3 {
         font-size: 10%;
     }
@@ -240,5 +338,6 @@ img {
     p {
         font-size: 5%;
     }
-
 }
+
+/*# sourceMappingURL=styles.css.map */
