--- a/poster/styles/styles.css
+++ b/poster/styles/styles.css
@@ -293,6 +293,17 @@ img {
   p {
     font-size: 35%;
   }
+  .top-subtext {
+    -ms-grid-column: 2;
+    -ms-grid-column-span: 2;
+    grid-column: 2/4;
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2/3;
+    text-align: left;
+    margin-left: 40%;
+    font-size: 100%;
+  }
   .text-1 {
     -ms-grid-column: 1;
     -ms-grid-column-span: 1;
@@ -337,8 +348,9 @@ img {
     -ms-grid-rows: .1fr .1fr .1fr .1fr;
     grid-template-rows: .1fr .1fr .1fr .1fr;
     text-transform: uppercase;
-    padding-left: 10%;
+    padding-left: 16%;
     padding-right: 10%;
+    margin-top: -10%;
     z-index: 1;
   }
   .text-9 {
