--- a/poster/styles/styles.css
+++ b/poster/styles/styles.css
@@ -287,6 +287,11 @@ img {
 }
 
 @media (max-width: 800px) and (min-width: 600px) {
+  .side {
+    padding-left: 40%;
+    -ms-grid-columns: 2fr;
+        grid-template-columns: 2fr;
+  }
   h3 {
     font-size: 60%;
   }
@@ -346,7 +351,7 @@ img {
     -ms-grid-columns: .25fr .25fr;
     grid-template-columns: .25fr .25fr;
     -ms-grid-rows: .1fr .1fr .1fr .1fr;
-    grid-template-rows: .1fr .1fr .1fr .1fr;
+    grid-template-rows: .05fr .05fr .05fr .05fr;
     text-transform: uppercase;
     padding-left: 16%;
     padding-right: 10%;
@@ -361,7 +366,7 @@ img {
     grid-row: 1/2;
     padding-right: 5%;
     font-size: 300%;
-    margin-top: -50%;
+    margin-top: -84.5%;
   }
   .text-10 {
     -ms-grid-column: 2;
@@ -371,7 +376,7 @@ img {
     -ms-grid-row-span: 1;
     grid-row: 1/2;
     font-size: 300%;
-    margin-top: -50%;
+    margin-top: -70%;
   }
   .text-11 {
     -ms-grid-column: 1;
@@ -382,7 +387,7 @@ img {
     grid-row: 2/3;
     padding-right: 5%;
     font-size: 300%;
-    margin-top: -50%;
+    margin-top: -84.5%;
   }
   .text-12 {
     -ms-grid-column: 2;
@@ -392,7 +397,7 @@ img {
     -ms-grid-row-span: 1;
     grid-row: 2/3;
     font-size: 300%;
-    margin-top: -50%;
+    margin-top: -70%;
   }
   .text-13 {
     -ms-grid-column: 1;
@@ -403,7 +408,7 @@ img {
     grid-row: 3/4;
     padding-right: 5%;
     font-size: 300%;
-    margin-top: -50%;
+    margin-top: -84.5%;
   }
   .text-14 {
     -ms-grid-column: 2;
@@ -413,7 +418,7 @@ img {
     -ms-grid-row-span: 1;
     grid-row: 3/4;
     font-size: 300%;
-    margin-top: -50%;
+    margin-top: -70%;
   }
   .text-15 {
     -ms-grid-column: 1;
@@ -424,7 +429,7 @@ img {
     grid-row: 4/5;
     padding-right: 5%;
     font-size: 300%;
-    margin-top: -50%;
+    margin-top: -84.5%;
   }
   .text-16 {
     -ms-grid-column: 2;
@@ -434,7 +439,12 @@ img {
     -ms-grid-row-span: 1;
     grid-row: 4/5;
     font-size: 300%;
-    margin-top: -50%;
+    margin-top: -70%;
+  }
+  img {
+    max-width: 125%;
+    max-height: 125%;
+    margin-right: 40%;
   }
 }
 
