--- a/poster/styles/styles.scss
+++ b/poster/styles/styles.scss
@@ -290,7 +290,7 @@ img {
 @media (max-width: 800px) and (min-width: 600px) {
     .side {
         padding-left: 40%;
-        grid-template-columns: 2fr;
+
     }
 
     h3 {
@@ -362,6 +362,7 @@ img {
         text-transform: uppercase;
         padding-left: 16%;
         padding-right: 10%;
+        margin-top: 15%;
 
 
         z-index: 1;
