--- a/poster/styles/styles.css
+++ b/poster/styles/styles.css
@@ -28,7 +28,8 @@
   -ms-grid-rows: .25fr .25fr .25fr;
   grid-template-rows: .25fr .25fr .25fr;
   -ms-grid-columns: 1fr 1fr 1fr;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 2fr .8fr .5fr;
+  z-index: 0;
 }
 
 .text-1 {
@@ -48,7 +49,7 @@
   -ms-grid-row: 1;
   -ms-grid-row-span: 1;
   grid-row: 1/2;
-  text-align: right;
+  text-align: left;
   margin-right: 5%;
   font-size: 10em;
 }
@@ -62,6 +63,7 @@
   grid-row: 1/2;
   text-align: right;
   font-size: 10em;
+  background-color: transparent;
 }
 
 .top-subtext {
@@ -72,11 +74,11 @@
   -ms-grid-row-span: 1;
   grid-row: 2/3;
   text-align: left;
-  margin-left: 40%;
-  font-size: 75%;
+  font-size: 2vw;
 }
 
 .side {
+  padding: 6%;
   display: -ms-grid;
   display: grid;
   -ms-grid-column: 1;
@@ -87,13 +89,13 @@
   grid-row: 2/4;
   -ms-grid-columns: 1fr;
   grid-template-columns: 1fr;
-  -ms-grid-rows: .12fr .12fr .12fr .12fr .12fr;
-  grid-template-rows: .1fr .1fr .1fr .1fr .1fr;
+  -ms-grid-rows: .121fr .121fr .121fr .121fr .121fr;
+      grid-template-rows: .121fr .121fr .121fr .121fr .121fr;
   background-color: transparent;
   margin-left: 5%;
   margin-right: 10%;
   z-index: 0;
-  line-height: 50%;
+  line-height: 70%;
 }
 
 .text-4 {
@@ -105,8 +107,9 @@
   grid-row: 5/6;
   -webkit-transform: rotate(-90deg);
   transform: rotate(-90deg);
-  padding: 5%;
-  font-size: .6em;
+  padding: 10%;
+  font-size: 2.5vw;
+  text-align: left;
 }
 
 .text-5 {
@@ -118,8 +121,8 @@
   grid-row: 4/5;
   -webkit-transform: rotate(-90deg);
   transform: rotate(-90deg);
-  padding: 5%;
-  font-size: .6em;
+  padding: 10%;
+  font-size: 2.5vw;
 }
 
 .text-6 {
@@ -131,8 +134,8 @@
   grid-row: 3/4;
   -webkit-transform: rotate(-90deg);
   transform: rotate(-90deg);
-  padding: 5%;
-  font-size: .6em;
+  padding: 10%;
+  font-size: 2.5vw;
 }
 
 .text-7 {
@@ -144,8 +147,8 @@
   grid-row: 2/3;
   -webkit-transform: rotate(-90deg);
   transform: rotate(-90deg);
-  padding: 5%;
-  font-size: .6em;
+  padding: 10%;
+  font-size: 2.5vw;
 }
 
 .text-8 {
@@ -157,8 +160,8 @@
   grid-row: 1/2;
   -webkit-transform: rotate(-90deg);
   transform: rotate(-90deg);
-  padding: 5%;
-  font-size: .6em;
+  padding: 10%;
+  font-size: 2.5vw;
 }
 
 .image {
@@ -168,7 +171,8 @@
   -ms-grid-row: 2;
   -ms-grid-row-span: 1;
   grid-row: 2/3;
-  overflow: none;
+  -o-object-fit: fill;
+     object-fit: fill;
 }
 
 .hero {
@@ -197,7 +201,7 @@
   -ms-grid-row-span: 1;
   grid-row: 1/2;
   padding-right: 5%;
-  font-size: 800%;
+  font-size: 18vw;
 }
 
 .text-10 {
@@ -207,7 +211,7 @@
   -ms-grid-row: 1;
   -ms-grid-row-span: 1;
   grid-row: 1/2;
-  font-size: 800%;
+  font-size: 18vw;
 }
 
 .text-11 {
@@ -218,7 +222,7 @@
   -ms-grid-row-span: 1;
   grid-row: 2/3;
   padding-right: 5%;
-  font-size: 800%;
+  font-size: 18vw;
 }
 
 .text-12 {
@@ -228,7 +232,7 @@
   -ms-grid-row: 2;
   -ms-grid-row-span: 1;
   grid-row: 2/3;
-  font-size: 800%;
+  font-size: 18vw;
 }
 
 .text-13 {
@@ -239,7 +243,7 @@
   -ms-grid-row-span: 1;
   grid-row: 3/4;
   padding-right: 5%;
-  font-size: 800%;
+  font-size: 18vw;
 }
 
 .text-14 {
@@ -249,7 +253,7 @@
   -ms-grid-row: 3;
   -ms-grid-row-span: 1;
   grid-row: 3/4;
-  font-size: 800%;
+  font-size: 18vw;
 }
 
 .text-15 {
@@ -260,7 +264,7 @@
   -ms-grid-row-span: 1;
   grid-row: 4/5;
   padding-right: 5%;
-  font-size: 800%;
+  font-size: 18vw;
 }
 
 .text-16 {
@@ -270,7 +274,7 @@
   -ms-grid-row: 4;
   -ms-grid-row-span: 1;
   grid-row: 4/5;
-  font-size: 800%;
+  font-size: 18vw;
 }
 
 h3 {
@@ -282,8 +286,9 @@ p {
 }
 
 img {
+  -o-object-fit: fill;
+     object-fit: fill;
   max-width: 100%;
-  max-height: 100%;
 }
 
 @media (max-width: 800px) and (min-width: 600px) {
