--- a/poster/styles/styles.scss
+++ b/poster/styles/styles.scss
@@ -28,7 +28,8 @@
     -ms-grid-rows: .25fr .25fr .25fr;
     grid-template-rows: .25fr .25fr .25fr;
     -ms-grid-columns: 1fr 1fr 1fr;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 2fr .8fr .5fr;
+    z-index: 0;
 }
 
 .text-1 {
@@ -42,15 +43,14 @@
 }
 
 .text-2 {
-    -ms-grid-column: 2;
-    -ms-grid-column-span: 1;
+
     grid-column: 2/3;
-    -ms-grid-row: 1;
-    -ms-grid-row-span: 1;
+
     grid-row: 1/2;
-    text-align: right;
+    text-align: left;
     margin-right: 5%;
     font-size: 10em;
+
 }
 
 .text-3 {
@@ -62,6 +62,7 @@
     grid-row: 1/2;
     text-align: right;
     font-size: 10em;
+    background-color: transparent;
 }
 
 .top-subtext {
@@ -72,28 +73,29 @@
     -ms-grid-row-span: 1;
     grid-row: 2/3;
     text-align: left;
-    margin-left: 40%;
-    font-size: 75%;
+
+
+    font-size: 2vw;
 }
 
 .side {
+    padding: 6%;
     display: -ms-grid;
     display: grid;
     -ms-grid-column: 1;
     -ms-grid-column-span: 1;
     grid-column: 1/2;
-    -ms-grid-row: 2;
-    -ms-grid-row-span: 2;
+
     grid-row: 2/4;
     -ms-grid-columns: 1fr;
     grid-template-columns: 1fr;
-    -ms-grid-rows: .12fr .12fr .12fr .12fr .12fr;
-    grid-template-rows: .1fr .1fr .1fr .1fr .1fr;
+
+    grid-template-rows: .121fr .121fr .121fr .121fr .121fr;
     background-color: transparent;
     margin-left: 5%;
     margin-right: 10%;
     z-index: 0;
-    line-height: 50%;
+    line-height: 70%;
 }
 
 .text-4 {
@@ -105,8 +107,11 @@
     grid-row: 5/6;
     -webkit-transform: rotate(-90deg);
     transform: rotate(-90deg);
-    padding: 5%;
-    font-size: .6em;
+    padding: 10%;
+    font-size: 2.5vw;
+    text-align: left;
+
+
 }
 
 .text-5 {
@@ -118,8 +123,8 @@
     grid-row: 4/5;
     -webkit-transform: rotate(-90deg);
     transform: rotate(-90deg);
-    padding: 5%;
-    font-size: .6em;
+    padding: 10%;
+    font-size: 2.5vw;
 }
 
 .text-6 {
@@ -131,8 +136,8 @@
     grid-row: 3/4;
     -webkit-transform: rotate(-90deg);
     transform: rotate(-90deg);
-    padding: 5%;
-    font-size: .6em;
+    padding: 10%;
+    font-size: 2.5vw;
 }
 
 .text-7 {
@@ -144,8 +149,8 @@
     grid-row: 2/3;
     -webkit-transform: rotate(-90deg);
     transform: rotate(-90deg);
-    padding: 5%;
-    font-size: .6em;
+    padding: 10%;
+    font-size: 2.5vw;
 }
 
 .text-8 {
@@ -157,8 +162,8 @@
     grid-row: 1/2;
     -webkit-transform: rotate(-90deg);
     transform: rotate(-90deg);
-    padding: 5%;
-    font-size: .6em;
+    padding: 10%;
+    font-size: 2.5vw;
 }
 
 .image {
@@ -168,7 +173,8 @@
     -ms-grid-row: 2;
     -ms-grid-row-span: 1;
     grid-row: 2/3;
-    overflow: none;
+    object-fit: fill;
+
 }
 
 .hero {
@@ -198,7 +204,7 @@
     -ms-grid-row-span: 1;
     grid-row: 1/2;
     padding-right: 5%;
-    font-size: 800%;
+    font-size: 18vw;
 }
 
 .text-10 {
@@ -208,7 +214,7 @@
     -ms-grid-row: 1;
     -ms-grid-row-span: 1;
     grid-row: 1/2;
-    font-size: 800%;
+    font-size: 18vw;
 }
 
 .text-11 {
@@ -219,7 +225,7 @@
     -ms-grid-row-span: 1;
     grid-row: 2/3;
     padding-right: 5%;
-    font-size: 800%;
+    font-size: 18vw;
 }
 
 .text-12 {
@@ -229,7 +235,7 @@
     -ms-grid-row: 2;
     -ms-grid-row-span: 1;
     grid-row: 2/3;
-    font-size: 800%;
+    font-size: 18vw;
 }
 
 .text-13 {
@@ -240,7 +246,7 @@
     -ms-grid-row-span: 1;
     grid-row: 3/4;
     padding-right: 5%;
-    font-size: 800%;
+    font-size: 18vw;
 }
 
 .text-14 {
@@ -250,7 +256,7 @@
     -ms-grid-row: 3;
     -ms-grid-row-span: 1;
     grid-row: 3/4;
-    font-size: 800%;
+    font-size: 18vw;
 }
 
 .text-15 {
@@ -261,7 +267,7 @@
     -ms-grid-row-span: 1;
     grid-row: 4/5;
     padding-right: 5%;
-    font-size: 800%;
+    font-size: 18vw;
 }
 
 .text-16 {
@@ -271,7 +277,7 @@
     -ms-grid-row: 4;
     -ms-grid-row-span: 1;
     grid-row: 4/5;
-    font-size: 800%;
+    font-size: 18vw;
 }
 
 h3 {
@@ -283,8 +289,9 @@ p {
 }
 
 img {
+    object-fit: fill;
     max-width: 100%;
-    max-height: 100%;
+    ;
 }
 
 @media (max-width: 800px) and (min-width: 600px) {
