--- a/poster/styles/styles.css
+++ b/poster/styles/styles.css
@@ -39,7 +39,7 @@
   -ms-grid-row: 1;
   -ms-grid-row-span: 1;
   grid-row: 1/2;
-  font-size: 10em;
+  font-size: 3vw;
 }
 
 .text-2 {
@@ -51,7 +51,7 @@
   grid-row: 1/2;
   text-align: left;
   margin-right: 5%;
-  font-size: 10em;
+  font-size: 3vw;
 }
 
 .text-3 {
@@ -62,7 +62,7 @@
   -ms-grid-row-span: 1;
   grid-row: 1/2;
   text-align: right;
-  font-size: 10em;
+  font-size: 3vw;
   background-color: transparent;
 }
 
@@ -88,8 +88,8 @@
   grid-row: 2/4;
   -ms-grid-columns: 1fr;
   grid-template-columns: 1fr;
-  -ms-grid-rows: .125fr .125fr .125fr .125fr .125fr;
-      grid-template-rows: .125fr .125fr .125fr .125fr .125fr;
+  -ms-grid-rows: .12fr .12fr .12fr .12fr .12fr;
+      grid-template-rows: .12fr .12fr .12fr .12fr .12fr;
   background-color: transparent;
   margin-left: 5%;
   margin-right: 10%;
@@ -291,162 +291,24 @@ img {
 }
 
 @media (max-width: 800px) and (min-width: 600px) {
-  .side {
-    padding-left: 20%;
-  }
-  h3 {
-    font-size: 60%;
-  }
-  p {
-    font-size: 35%;
-  }
-  .top-subtext {
-    -ms-grid-column: 2;
-    -ms-grid-column-span: 2;
-    grid-column: 2/4;
-    -ms-grid-row: 2;
-    -ms-grid-row-span: 1;
-    grid-row: 2/3;
-    text-align: left;
-    margin-left: 40%;
-    font-size: 100%;
-  }
-  .text-1 {
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 1;
-    grid-column: 1/2;
-    -ms-grid-row: 1;
-    -ms-grid-row-span: 1;
-    grid-row: 1/2;
-    font-size: 20%;
-  }
-  .text-2 {
-    -ms-grid-column: 2;
-    -ms-grid-column-span: 1;
-    grid-column: 2/3;
-    -ms-grid-row: 1;
-    -ms-grid-row-span: 1;
-    grid-row: 1/2;
-    text-align: right;
-    margin-right: 5%;
-    font-size: 7.5em;
-  }
-  .text-3 {
-    -ms-grid-column: 3;
-    -ms-grid-column-span: 1;
-    grid-column: 3/4;
-    -ms-grid-row: 1;
-    -ms-grid-row-span: 1;
-    grid-row: 1/2;
-    text-align: right;
-    font-size: 7.5em;
-  }
-  .hero {
+  .wrapper {
     display: -ms-grid;
     display: grid;
-    -ms-grid-column: 2;
-    -ms-grid-column-span: 2;
-    grid-column: 2/4;
-    -ms-grid-row: 3;
-    -ms-grid-row-span: 1;
-    grid-row: 3/4;
-    -ms-grid-columns: .25fr .25fr;
-    grid-template-columns: .25fr .25fr;
-    -ms-grid-rows: .1fr .1fr .1fr .1fr;
-    grid-template-rows: .05fr .05fr .05fr .05fr;
-    text-transform: uppercase;
-    padding-left: 16%;
-    padding-right: 10%;
-    margin-top: 15%;
-    z-index: 1;
+    -ms-grid-rows: .5fr 1.5fr 9fr;
+    grid-template-rows: .5fr 1.5fr 9fr;
+    -ms-grid-columns: .5fr 1fr 1fr;
+        grid-template-columns: .5fr 1fr 1fr;
+    background-color: #bc6c32;
+    margin: 5%;
   }
-  .text-9 {
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 1;
-    grid-column: 1/2;
-    -ms-grid-row: 1;
-    -ms-grid-row-span: 1;
-    grid-row: 1/2;
-    padding-right: 5%;
-    font-size: 300%;
-    margin-top: -84.5%;
+  .text-1 {
+    font-size: 1.5vw;
   }
-  .text-10 {
-    -ms-grid-column: 2;
-    -ms-grid-column-span: 1;
-    grid-column: 2/3;
-    -ms-grid-row: 1;
-    -ms-grid-row-span: 1;
-    grid-row: 1/2;
-    font-size: 300%;
-    margin-top: -70%;
+  .text-2 {
+    font-size: 1.5vw;
   }
-  .text-11 {
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 1;
-    grid-column: 1/2;
-    -ms-grid-row: 2;
-    -ms-grid-row-span: 1;
-    grid-row: 2/3;
-    padding-right: 5%;
-    font-size: 300%;
-    margin-top: -84.5%;
-  }
-  .text-12 {
-    -ms-grid-column: 2;
-    -ms-grid-column-span: 1;
-    grid-column: 2/3;
-    -ms-grid-row: 2;
-    -ms-grid-row-span: 1;
-    grid-row: 2/3;
-    font-size: 300%;
-    margin-top: -70%;
-  }
-  .text-13 {
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 1;
-    grid-column: 1/2;
-    -ms-grid-row: 3;
-    -ms-grid-row-span: 1;
-    grid-row: 3/4;
-    padding-right: 5%;
-    font-size: 300%;
-    margin-top: -84.5%;
-  }
-  .text-14 {
-    -ms-grid-column: 2;
-    -ms-grid-column-span: 1;
-    grid-column: 2/3;
-    -ms-grid-row: 3;
-    -ms-grid-row-span: 1;
-    grid-row: 3/4;
-    font-size: 300%;
-    margin-top: -70%;
-  }
-  .text-15 {
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 1;
-    grid-column: 1/2;
-    -ms-grid-row: 4;
-    -ms-grid-row-span: 1;
-    grid-row: 4/5;
-    padding-right: 5%;
-    font-size: 300%;
-    margin-top: -84.5%;
-  }
-  .text-16 {
-    -ms-grid-column: 2;
-    -ms-grid-column-span: 1;
-    grid-column: 2/3;
-    -ms-grid-row: 4;
-    -ms-grid-row-span: 1;
-    grid-row: 4/5;
-    font-size: 300%;
-    margin-top: -70%;
-  }
-  img {
-    max-width: 125%;
-    max-height: 125%;
+  .text-3 {
+    font-size: 1.5vw;
   }
 }
 
