--- a/poster/styles/styles.scss
+++ b/poster/styles/styles.scss
@@ -299,25 +299,31 @@ img {
 @media (max-width: 800px) and (min-width: 600px) {
 
     .wrapper {
-        display: -ms-grid;
-        display: grid;
-        -ms-grid-rows: .5fr 1.5fr 9fr;
-        grid-template-rows: .5fr 1.5fr 9fr;
+        grid-template-columns: .5fr .5fr;
 
-        grid-template-columns: .5fr 1fr 1fr;
-        background-color: #bc6c32;
-        margin: 5%;
     }
 
     .text-1 {
-        font-size: 1.5vw;
+        font-size: 1vw;
     }
 
     .text-2 {
-        font-size: 1.5vw;
+        font-size: 1vw;
     }
 
     .text-3 {
+        font-size: 1vw;
+    }
+
+    .side {
+        grid-column: 1/2;
+    }
+
+    .text-4,
+    .text-5,
+    .text.6,
+    .text-7,
+    .text-8 {
         font-size: 1.5vw;
     }
 
