trying to make media query 1 work

--- a/poster/styles/styles.css
+++ b/poster/styles/styles.css
@@ -290,31 +290,24 @@ img {
   max-width: 100%;
 }
 
-@media (max-width: 900px) and (min-width: 600px) {
+@media (max-width: 1600px) and (min-width: 1200px) {
   .wrapper {
-    -ms-grid-columns: .5fr .5fr;
-        grid-template-columns: .5fr .5fr;
+    -ms-grid-columns: 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
   }
   .text-1 {
-    font-size: 1vw;
+    font-size: 2vw;
   }
   .text-2 {
-    font-size: 1vw;
+    font-size: 2vw;
   }
   .text-3 {
-    font-size: 1vw;
+    font-size: 2vw;
   }
   .side {
     -ms-grid-column: 1;
     -ms-grid-column-span: 1;
     grid-column: 1/2;
-  }
-  .text-4,
-  .text-5,
-  .text.6,
-  .text-7,
-  .text-8 {
-    font-size: 1.5vw;
   }
 }
 
