--- a/poster/styles/styles.css
+++ b/poster/styles/styles.css
@@ -342,6 +342,57 @@ img {
     -ms-grid-column-span: 1;
     grid-column: 1/2;
   }
+  .text-4 {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1/2;
+    -ms-grid-row: 5;
+    -ms-grid-row-span: 1;
+    grid-row: 5/6;
+    padding: 10%;
+    font-size: 2.5vw;
+    text-align: left;
+  }
+  .text-5 {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1/2;
+    -ms-grid-row: 4;
+    -ms-grid-row-span: 1;
+    grid-row: 4/5;
+    padding: 10%;
+    font-size: 2.5vw;
+  }
+  .text-6 {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1/2;
+    -ms-grid-row: 3;
+    -ms-grid-row-span: 1;
+    grid-row: 3/4;
+    padding: 10%;
+    font-size: 2.5vw;
+  }
+  .text-7 {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1/2;
+    -ms-grid-row: 2;
+    -ms-grid-row-span: 1;
+    grid-row: 2/3;
+    padding: 10%;
+    font-size: 2.5vw;
+  }
+  .text-8 {
+    -ms-grid-column: 1;
+    -ms-grid-column-span: 1;
+    grid-column: 1/2;
+    -ms-grid-row: 1;
+    -ms-grid-row-span: 1;
+    grid-row: 1/2;
+    padding: 10%;
+    font-size: 2.5vw;
+  }
 }
 
 @media (max-width: 599px) and (min-width: 0px) {
