--- a/poster/styles/styles.css
+++ b/poster/styles/styles.css
@@ -340,52 +340,57 @@ img {
     -ms-flex-line-pack: right;
         align-content: right;
   }
-  h3 {
-    font-size: 50%;
-  }
   .side {
-    z-index: 1;
     -ms-grid-column: 1;
     -ms-grid-column-span: 1;
     grid-column: 1/2;
-    -ms-grid-rows: .5fr .5fr .5fr .5fr .5fr;
-        grid-template-rows: .5fr .5fr .5fr .5fr .5fr;
+    -ms-grid-rows: .05fr .05fr .05fr .05fr .05fr;
+        grid-template-rows: .05fr .05fr .05fr .05fr .05fr;
+    grid-auto-columns: 0%;
   }
   .text-4 {
     -ms-grid-row: 5;
     -ms-grid-row-span: 1;
     grid-row: 5/6;
-    padding: 10%;
     font-size: 2.5vw;
-    text-align: left;
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
   }
   .text-5 {
     -ms-grid-row: 4;
     -ms-grid-row-span: 1;
     grid-row: 4/5;
-    padding: 10%;
+    padding: 5%;
     font-size: 2.5vw;
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
   }
   .text-6 {
     -ms-grid-row: 3;
     -ms-grid-row-span: 1;
     grid-row: 3/4;
-    padding: 10%;
+    padding: 5%;
     font-size: 2.5vw;
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
   }
   .text-7 {
     -ms-grid-row: 2;
     -ms-grid-row-span: 1;
     grid-row: 2/3;
-    padding: 10%;
+    padding: 5%;
     font-size: 2.5vw;
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
   }
   .text-8 {
     -ms-grid-row: 1;
     -ms-grid-row-span: 1;
     grid-row: 1/2;
-    padding: 10%;
+    padding: 5%;
     font-size: 2.5vw;
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
   }
   .hero {
     display: -ms-grid;
@@ -401,7 +406,7 @@ img {
     -ms-grid-rows: .1fr .1fr .1fr .1fr;
     grid-template-rows: .1fr .1fr .1fr .1fr;
     text-transform: uppercase;
-    padding-left: 10%;
+    padding-left: 0%;
   }
   .text-9 {
     -ms-grid-column: 1;
@@ -431,6 +436,7 @@ img {
     grid-row: 2/3;
     padding-right: 5%;
     font-size: 18vw;
+    margin-bottom: 5%;
   }
   .text-12 {
     -ms-grid-column: 2;
@@ -440,6 +446,7 @@ img {
     -ms-grid-row-span: 1;
     grid-row: 2/3;
     font-size: 18vw;
+    margin-bottom: 5%;
   }
   .text-13 {
     -ms-grid-column: 1;
@@ -450,6 +457,7 @@ img {
     grid-row: 3/4;
     padding-right: 5%;
     font-size: 18vw;
+    margin-bottom: 5%;
   }
   .text-14 {
     -ms-grid-column: 2;
@@ -459,6 +467,7 @@ img {
     -ms-grid-row-span: 1;
     grid-row: 3/4;
     font-size: 18vw;
+    margin-bottom: 5%;
   }
   .text-15 {
     -ms-grid-column: 1;
@@ -469,6 +478,7 @@ img {
     grid-row: 4/5;
     padding-right: 5%;
     font-size: 18vw;
+    margin-bottom: 5%;
   }
   .text-16 {
     -ms-grid-column: 2;
@@ -478,6 +488,7 @@ img {
     -ms-grid-row-span: 1;
     grid-row: 4/5;
     font-size: 18vw;
+    margin-bottom: 5%;
   }
 }
 
