--- a/poster/styles/styles.scss
+++ b/poster/styles/styles.scss
@@ -349,14 +349,13 @@ img {
 
 
 
-    h3 {
-        font-size: 50%;
-    }
+  
 
     .side {
-        z-index: 1;
+       
         grid-column: 1/2;
-        grid-template-rows: .5fr .5fr .5fr .5fr .5fr;
+        grid-template-rows: .05fr .05fr .05fr .05fr .05fr;
+        grid-auto-columns: 0%;
 
     }
 
@@ -365,9 +364,9 @@ img {
        
         grid-row: 5/6;
 
-        padding: 10%;
+        
         font-size: 2.5vw;
-        text-align: left;
+       transform: rotate(0deg);
 
 
     }
@@ -376,18 +375,20 @@ img {
 
         
         grid-row: 4/5;
-
-        padding: 10%;
+        padding: 5%;
+       
         font-size: 2.5vw;
+        transform: rotate(0deg);
     }
 
     .text-6 {
 
         
         grid-row: 3/4;
-
-        padding: 10%;
+padding: 5%;
+        
         font-size: 2.5vw;
+        transform: rotate(0deg);
     }
 
     .text-7 {
@@ -395,8 +396,9 @@ img {
        
         grid-row: 2/3;
 
-        padding: 10%;
+        padding: 5%;
         font-size: 2.5vw;
+        transform: rotate(0deg);
     }
 
     .text-8 {
@@ -404,9 +406,9 @@ img {
       
         grid-row: 1/2;
 
-        padding: 10%;
+        padding: 5%;
         font-size: 2.5vw;
-
+        transform: rotate(0deg);
     }
 
     .hero {
@@ -422,7 +424,9 @@ img {
     -ms-grid-rows: .1fr .1fr .1fr .1fr;
     grid-template-rows: .1fr .1fr .1fr .1fr;
     text-transform: uppercase;
-    padding-left: 10%;
+    padding-left:0%;
+
+    
 
 
 }
@@ -457,6 +461,7 @@ img {
     grid-row: 2/3;
     padding-right: 5%;
     font-size: 18vw;
+    margin-bottom: 5%;
 }
 
 .text-12 {
@@ -467,6 +472,7 @@ img {
     -ms-grid-row-span: 1;
     grid-row: 2/3;
     font-size: 18vw;
+     margin-bottom: 5%;
 }
 
 .text-13 {
@@ -478,6 +484,7 @@ img {
     grid-row: 3/4;
     padding-right: 5%;
     font-size: 18vw;
+     margin-bottom: 5%;
 }
 
 .text-14 {
@@ -488,6 +495,7 @@ img {
     -ms-grid-row-span: 1;
     grid-row: 3/4;
     font-size: 18vw;
+    margin-bottom: 5%;
 }
 
 .text-15 {
@@ -499,6 +507,7 @@ img {
     grid-row: 4/5;
     padding-right: 5%;
     font-size: 18vw;
+     margin-bottom: 5%;
 }
 
 .text-16 {
@@ -509,6 +518,7 @@ img {
     -ms-grid-row-span: 1;
     grid-row: 4/5;
     font-size: 18vw;
+    margin-bottom: 5%;
 }
 
 
